# customers_balance

./: .gitignore  manage.py  pyproject.toml  requirements.txt
apps/core/: admin.py  urls.py  utils.py  views.py
apps/customers/: admin.py  api.py  models.py  schemas.py
apps/customers/migrations/: 0001_initial.py
apps/transactions/: admin.py  api.py  models.py  schemas.py
apps/transactions/migrations/: 0001_initial.py  0002_remove_transaction_deleted_by_and_more.py
apps/transactions/scripts/: main.py
customers_balance/: api.py  asgi.py  urls.py  wsgi.py
customers_balance/settings/: base.py  deployment.py  dev.py
frontend/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
frontend/public/: 404.html  index.html  messages.html
frontend/public/registration/: logged_out.html  login.html
frontend/src/: App.svelte  main.js
frontend/src/components/: AddCustomer.svelte  AddTransaction.svelte  Breadcrumb.svelte  ContextMenu.svelte  CustomerCard.svelte  ExportExcel.svelte  FlashMessages.svelte  Header.svelte  LanguageToggle.svelte  LoadingModal.svelte  LogoutForm.svelte  NumberInput.svelte  Report.svelte  SearchInput.svelte  Table.svelte  UserDropDown.svelte
frontend/src/components/icons/: Clock.svelte  Ellipsis.svelte  Excel.svelte  Language.svelte  Loading.svelte  Logout.svelte  Plus.svelte  PlusUser.svelte  Search.svelte  (+3 more)
frontend/src/locale/: ar.js  en.js  i18n.js
frontend/src/pages/: Add.svelte  HomePage.svelte  Ledger.svelte  NotFound.svelte  Transactions.svelte
frontend/src/stores/: store.js
frontend/src/utils/: functions.js
